# FluidSimPendant2

./: .gitignore  CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
components/st7789/: st7789.c  st7789.h
main/: CMakeLists.txt  main.c  main.cpp
main/FluidSim/: Mathutils.h  Matrix2.h  Particle.h  Scene.cpp  Scene.h  Vector2.h  Vector3.h
main/PWR_Key/: PWR_Key.c  PWR_Key.h
main/QMI8658/: QMI8658.cpp  QMI8658.h
